--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
-    "vite": "^5.0.8"
+    "sass": "^1.69.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -26,6 +26,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "sass": "^1.70.0",
-    "vite": "^5.0.8"
-  }
+    "vite": "5.0.1"
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "vite.config.js",
+  "author": "",
+  "license": "ISC"
 }
