--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "sass": "^1.70.0",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "vite-plugin-sass": "^0.1.0"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "vite.config.js",
